Enhanced animations by adding speed control classes

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="jumbotron-overlay">&nbsp;</div>
         <!--./jumbotron-overlay-->
         <div class="jumbotron-fluid">
-            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
-                data-aos-delay="200">
+            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1660"
+                data-aos-delay="300">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="display-3">Infinity</h1>
@@ -110,10 +110,10 @@
                 <div class="row">
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
-                            <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind" data-aos="zoom-in"
-                                data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                            <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind" data-aos="zoom-in" data-aos-delay="150"
+                                data-aos-duration="2000" data-aos-anchor-placement="center-bottom">
                             </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-delay="150" data-aos-duration="2000"
                                 data-aos-anchor-placement="center-bottom">
                                 Mind
                             </h4>
@@ -126,8 +126,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-fire-alt d-sm-block" data-toggle="collapse" data-target="#body"
-                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                                data-aos="zoom-in" data-aos-delay="150" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="150"
                                 data-aos-anchor-placement="center-bottom">Body</h4>
                             <p id="body" class="collapse display-6 about-content">Yoga improves circulation, balance and physical strength.</p>
                         </div>
@@ -135,9 +135,9 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-praying-hands d-sm-block" data-toggle="collapse" data-target="#spirit"
-                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                                data-aos="zoom-in" data-aos-duration="2000" data-aos-anchor-placement="center-bottom">
                             </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000"
                                 data-aos-anchor-placement="center-bottom">Spirit</h4>
                             <p id="spirit" class="collapse display-6 about-content">Yoga and meditation allow for deep, spiritual healing.</p>
                         </div>
@@ -147,8 +147,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace"
-                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                                data-aos="zoom-in" data-aos-delay="150" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000"
                                 data-aos-anchor-placement="center-bottom">Peace</h4>
                             <p id="peace" class="collapse display-6 about-content">Our instructors will walk you through calm, stress-free meditations.
                             </p>
@@ -157,8 +157,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-heart d-sm-block" data-toggle="collapse" data-target="#love" data-aos="zoom-in"
-                                data-aos-duration="1000" data-aos-anchor-placement="center-bottom"> </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                                data-aos-duration="2000" data-aos-anchor-placement="center-bottom"> </i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="150"
                                 data-aos-anchor-placement="center-bottom">Love</h4>
                             <p id="love" class="collapse display-6 about-content">We are a loving community of teachers and friends.</p>
                         </div>
@@ -166,8 +166,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-yin-yang d-sm-block" data-toggle="collapse" data-target="#harmony"
-                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
+                                data-aos="zoom-in" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="150"
                                 data-aos-anchor-placement="center-bottom">Harmony </h4>
                             <p id="harmony" class="collapse display-6 about-content">We want you to experience physical and emotional balance.</p>
                         </div>
@@ -201,7 +201,7 @@
                     <div class="col xs-8 col-sm-4">
                         <!--First Card-->
                         <div class="card h-100 text-center" data-aos="fade-up"
-                            data-aos-anchor-placement="center-bottom">
+                        data-aos-delay="150" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             <div class="mx-auto">
                                 <img src="assets/images/vinyasa.jpg" alt="people taking vinyasa flow class at infinity"
                                     class="card-img-top">
@@ -226,7 +226,7 @@
                     </div>
                     <!--Second Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
+                        <div class="card h-100" data-aos="fade-up"    data-aos-delay="150" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             <div class="mx-auto">
                                 <img src="assets/images/restorative.jpg"
                                     alt="women using blocks during restorative yoga" class="card-img-top">
@@ -251,7 +251,7 @@
                     </div>
                     <!--Third Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
+                        <div class="card h-100" data-aos="fade-up"    data-aos-delay="150" data-aos-duration="1000" >
                             <div class="mx-auto">
                                 <img src="assets/images/chakracleansing.jpg"
                                     alt="people meditating during infinity chakra-cleansing class" class="card-img-top">
@@ -290,8 +290,8 @@
     <!--Quotes-->
     <section id="reviews" class="reviews">
         <div class="row text-center">
-            <div class="col-12 section-header" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                data-aos-duration="300">
+            <div class="col-12 section-header" data-aos-delay="150" data-aos-duration="1000" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+                data-aos-duration="1500">
                 <h2 class="section-header">Customer Reviews</h2>
                 <hr>
                 <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
@@ -301,7 +301,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--First Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                    data-aos-duration="300">
+                data-aos-delay="150" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes1.png" alt="closeup of female doing yoga"
@@ -323,7 +323,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--Second Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                    data-aos-duration="300">
+                data-aos-delay="150" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes3.png" alt="closeup of young man at infinity"
@@ -346,7 +346,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--Third Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                    data-aos-duration="300">
+                data-aos-delay="150" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes2.png" alt="headshot of happy female infinity member"
@@ -390,7 +390,7 @@
                         <!--Address-->
                         <li id="contact-info">
                             <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
-                                <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-duration="1000"
+                                <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-duration="1660"
                                     data-aos-anchor-placement="center-bottom">
                                 </i>
                             </a>
@@ -399,7 +399,7 @@
                         <!--Phone number-->
                         <li id="contact-info">
                             <a href="https://www.google.com/gmail/about/" target="_blank">
-                                <i class="fas fa-phone" data-aos="zoom-in" data-aos-duration="1000"
+                                <i class="fas fa-phone" data-aos="zoom-in"    data-aos-delay="150" data-aos-duration="1000" 
                                     data-aos-anchor-placement="center-bottom">
                                 </i>
                             </a>
@@ -408,7 +408,7 @@
                         <!--Email-->
                         <li id="contact-info">
                             <a href="https://voice.google.com/about" target="_blank">
-                                <i class="fas fa-envelope-open" data-aos="zoom-in" data-aos-duration="1000"
+                                <i class="fas fa-envelope-open" data-aos="zoom-in"  data-aos-delay="150" data-aos-duration="1000" 
                                     data-aos-anchor-placement="center-bottom"></i>
                             </a>
                             <span class="contact">owner@infinty.nyc</span>
