--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home
                     </a>
                 </li>
                 <li class="nav-item">
@@ -65,7 +65,7 @@
 <!--Begin Main Page Content-->
 <main id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <!-- Jumbotron Section-->
-    <section class="jumbotron-container">
+    <section id="home" class="jumbotron-container">
         <!--Jumbotron Overlay-->
         <div class="jumbotron-overlay">&nbsp;</div>
         <!--./jumbotron-overlay-->
