Repaired w3c html validation errors

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
         <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-        <a href="#contact" class="btn-sm"><button class="cta_button">Sign Up</button></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <a href="#contact" class="cta_button">Sign Up</a>
+        <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
-        </button>
+        </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -70,7 +70,7 @@
         <div class="jumbotron-overlay">&nbsp;</div>
         <!--./jumbotron-overlay-->
         <div class="jumbotron-fluid">
-            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1660"
+            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="2000"
                 data-aos-delay="300">
                 <div class="row">
                     <div class="col-12">
@@ -104,8 +104,12 @@
             <div class="container-fluid text-center">
                 <h3 class="about-header">Why Infinity?</h3>
                 <hr>
-                <p id="description">
-                    Yoga and meditation have rewarding effects on the mind, body and soul. Click the icons below to learn more!
+               <article>
+                    Yoga and meditation have many rewarding effects on the mind, body and soul.
+                    </article>
+                    <p class="text-muted">
+                        Click the icons below to learn more!
+                    </p>
                 </p>
                 <div class="row">
                     <div class="col-xs-8 col-sm-4">
@@ -291,7 +295,7 @@
     <section id="reviews" class="reviews">
         <div class="row text-center">
             <div class="col-12 section-header" data-aos-delay="150" data-aos-duration="1000" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                data-aos-duration="1500">
+                data-aos-duration="1000">
                 <h2 class="section-header">Customer Reviews</h2>
                 <hr>
                 <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
