--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="col-xs-4">
                     <ul class="nav-list justify-content-center" style="padding: 0 20px;">
                         <!--Address-->
-                        <li id="contact-info">
+                        <li class="contact-info">
                             <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
                                 <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-duration="1660"
                                     data-aos-anchor-placement="center-bottom">
@@ -401,7 +401,7 @@
                             <span class="contact">New York, New York</span>
                         </li>
                         <!--Phone number-->
-                        <li id="contact-info">
+                        <li class="contact-info">
                             <a href="https://www.google.com/gmail/about/" target="_blank">
                                 <i class="fas fa-phone" data-aos="zoom-in"    data-aos-delay="150" data-aos-duration="1000" 
                                     data-aos-anchor-placement="center-bottom">
@@ -410,7 +410,7 @@
                             <span class="contact">212.000.0000</span>
                         </li>
                         <!--Email-->
-                        <li id="contact-info">
+                        <li class="contact-info">
                             <a href="https://voice.google.com/about" target="_blank">
                                 <i class="fas fa-envelope-open" data-aos="zoom-in"  data-aos-delay="150" data-aos-duration="1000" 
                                     data-aos-anchor-placement="center-bottom"></i>
