--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
         <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+        <!--the design for this button was copied from http://www.matrebel.co.uk/ -->
         <a href="#contact" class="cta_button">Sign Up</a>
         <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -219,6 +220,7 @@
                                 <p>Flow through a sequence of Sun Salutations and standing postures, linking
                                     breath and movement as you improve strength and flexibility.</p>
                                 <div class="signUp">
+                                    <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                     <a class="nav-item" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -245,6 +247,7 @@
                                 <p>Using the support of blankets, bolsters and other props, experience a
                                     complete relaxation of body, mind and soul as you heal within.</p>
                                 <div class="signUp">
+                                    <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                     <a class="nav-item" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -274,6 +277,7 @@
                                     breathing techniques followed by a guided meditation.
                                 </p>
                                 <div class="signUp">
+                                    <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                     <a class="nav-item" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -470,6 +474,7 @@
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12">
+                <!--copied from (https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_company_footer&stacked=h)-->
                 <a href="#myPage" title="To Top">
                     <i class="fas fa-chevron-up"></i>
                 </a>
