--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
         <a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
         <!--the design for this button was copied from http://www.matrebel.co.uk/ -->
         <a href="#contact" class="cta_button">Sign Up</a>
-        <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-            </span>
-        </a>
+            <span class="navbar-toggler-icon"></span>
+    </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -64,15 +63,15 @@
 <!--./header-->
 
 <!--Begin Main Page Content-->
-<main id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<main id="myPage" data-spy="scroll" data-target="navbarNav" data-offset="60">
     <!-- Jumbotron Section-->
     <section id="home" class="jumbotron-container">
         <!--Jumbotron Overlay-->
         <div class="jumbotron-overlay">&nbsp;</div>
         <!--./jumbotron-overlay-->
         <div class="jumbotron-fluid">
-            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="2000"
-                data-aos-delay="200">
+            <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                data-aos-delay="100">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="display-3">Infinity</h1>
@@ -116,9 +115,9 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind" data-aos="zoom-in" data-aos-delay="100"
-                                data-aos-duration="2000" data-aos-anchor-placement="center-bottom">
+                                data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="2000"
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000"
                                 data-aos-anchor-placement="center-bottom">
                                 Mind
                             </h4>
@@ -131,8 +130,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-fire-alt d-sm-block" data-toggle="collapse" data-target="#body"
-                                data-aos="zoom-in" data-aos-delay="100" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="100"
+                                data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"
                                 data-aos-anchor-placement="center-bottom">Body</h4>
                             <p id="body" class="collapse display-6 about-content">Yoga improves circulation, balance and physical strength.</p>
                         </div>
@@ -140,9 +139,9 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-praying-hands d-sm-block" data-toggle="collapse" data-target="#spirit"
-                                data-aos="zoom-in" data-aos-duration="2000" data-aos-anchor-placement="center-bottom">
+                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000"
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
                                 data-aos-anchor-placement="center-bottom">Spirit</h4>
                             <p id="spirit" class="collapse display-6 about-content">Yoga and meditation allow for deep, spiritual healing.</p>
                         </div>
@@ -152,8 +151,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace"
-                                data-aos="zoom-in" data-aos-delay="100" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000"
+                                data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000"
                                 data-aos-anchor-placement="center-bottom">Peace</h4>
                             <p id="peace" class="collapse display-6 about-content">Our instructors will walk you through calm, stress-free meditations.
                             </p>
@@ -162,8 +161,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-heart d-sm-block" data-toggle="collapse" data-target="#love" data-aos="zoom-in"
-                                data-aos-duration="2000" data-aos-anchor-placement="center-bottom"> </i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="100"
+                                data-aos-duration="1000" data-aos-anchor-placement="center-bottom"> </i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"
                                 data-aos-anchor-placement="center-bottom">Love</h4>
                             <p id="love" class="collapse display-6 about-content">We are a loving community of teachers and friends.</p>
                         </div>
@@ -171,8 +170,8 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-yin-yang d-sm-block" data-toggle="collapse" data-target="#harmony"
-                                data-aos="zoom-in" data-aos-duration="2000" data-aos-anchor-placement="center-bottom"></i>
-                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="100"
+                                data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
+                            <h4 class="about-header" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"
                                 data-aos-anchor-placement="center-bottom">Harmony </h4>
                             <p id="harmony" class="collapse display-6 about-content">We want you to experience physical and emotional balance.</p>
                         </div>
@@ -206,7 +205,7 @@
                     <div class="col xs-8 col-sm-4">
                         <!--First Card-->
                         <div class="card h-100 text-center" data-aos="fade-up"
-                        data-aos-duration="2000"
+                        data-aos-duration="1000"
                         data-aos-delay="100" data-aos-anchor-placement="center-bottom">
                             <div class="mx-auto">
                                 <img src="assets/images/vinyasa.jpg" alt="people taking vinyasa flow class at infinity"
@@ -233,8 +232,7 @@
                     </div>
                     <!--Second Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up"    data-aos-duration="1000"
-                        data-aos-delay="200" data-aos-anchor-placement="center-bottom">
+                        <div class="card h-100" data-aos="fade-up"   data-aos-delay="100" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             <div class="mx-auto">
                                 <img src="assets/images/restorative.jpg"
                                     alt="women using blocks during restorative yoga" class="card-img-top">
@@ -260,8 +258,7 @@
                     </div>
                     <!--Third Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up"    data-aos-duration="1000"
-                        data-aos-delay="100" >
+                        <div class="card h-100" data-aos="fade-up"  data-aos-delay="100" data-aos-duration="1000">
                             <div class="mx-auto">
                                 <img src="assets/images/chakracleansing.jpg"
                                     alt="people meditating during infinity chakra-cleansing class" class="card-img-top">
@@ -311,7 +308,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--First Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                data-aos-delay="200" data-aos-duration="1000">
+                data-aos-delay="100" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes1.png" alt="closeup of female doing yoga"
@@ -333,7 +330,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--Second Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                data-aos-delay="200" data-aos-duration="1000">
+                data-aos-delay="100" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes3.png" alt="closeup of young man at infinity"
@@ -356,7 +353,7 @@
             <div class="col-xs-8 col-sm-4">
                 <!--Third Card-->
                 <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
-                data-aos-delay="200" data-aos-duration="1000">
+                data-aos-delay="100" data-aos-duration="1000">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
                         <img src="assets/images/quotes2.png" alt="headshot of happy female infinity member"
@@ -400,7 +397,7 @@
                         <!--Address-->
                         <li class="contact-info">
                             <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
-                                <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="2000"
+                                <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000"
                                     data-aos-anchor-placement="center-bottom">
                                 </i>
                             </a>
@@ -409,7 +406,7 @@
                         <!--Phone number-->
                         <li class="contact-info">
                             <a href="https://www.google.com/gmail/about/" target="_blank">
-                                <i class="fas fa-phone" data-aos="zoom-in"    data-aos-delay="100" data-aos-duration="2000"
+                                <i class="fas fa-phone" data-aos="zoom-in"    data-aos-delay="100" data-aos-duration="1000"
                                     data-aos-anchor-placement="center-bottom">
                                 </i>
                             </a>
@@ -418,7 +415,7 @@
                         <!--Email-->
                         <li class="contact-info">
                             <a href="https://voice.google.com/about" target="_blank">
-                                <i class="fas fa-envelope-open" data-aos="zoom-in"  data-aos-delay="100" data-aos-duration="2000"
+                                <i class="fas fa-envelope-open" data-aos="zoom-in"  data-aos-delay="100" data-aos-duration="1000"
                                     data-aos-anchor-placement="center-bottom"></i>
                             </a>
                             <span class="contact">owner@infinty.nyc</span>
