--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     </section>
     <!--./jumbotron-section-->
 
+<!--About Section-->
+<section id="about">
     <!--About Container-->
     <div class="container-wrapper-about">
-        <!--About Section-->
-        <section id="about">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 section-header">
@@ -180,10 +180,10 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!--./about-section-->
-</div>
-<!--./about-container-->
+    </div>
+    <!--./about-container-->
+</section>
+<!--./about-section-->
 
 <!--Schedule Container-->
 <div class="container-wrapper-schedule">
@@ -258,7 +258,7 @@
                     </div>
                     <!--Third Card-->
                     <div class="col xs-8 col-sm-4">
-                        <div class="card h-100" data-aos="fade-up"  data-aos-delay="100" data-aos-duration="1000">
+                        <div class="card h-100"data-aos="fade-up"   data-aos-delay="100" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
                             <div class="mx-auto">
                                 <img src="assets/images/chakracleansing.jpg"
                                     alt="people meditating during infinity chakra-cleansing class" class="card-img-top">
@@ -294,9 +294,11 @@
 </div>
 <!--./schedule-container-->
 
-<div class="container-fluid quotes-container">
-    <!--Quotes-->
-    <section id="reviews" class="reviews">
+<!--Customer Reviews Section Start Here-->
+    <!-- Style copied from Testimonials v.1 (https://mdbootstrap.com/docs/jquery/sections/testimonials/) -->
+<section id="reviews" class="reviews">
+    <!--Reviews Containers-->
+    <div class="container-fluid reviews-container">
         <div class="row text-center">
             <div class="col-12 section-header">
                 <h2 class="section-header">Customer Reviews</h2>
@@ -304,6 +306,7 @@
                 <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
             </div>
         </div>
+        <!--New row for reviews cards-->
         <div class="row text-center">
             <div class="col-xs-8 col-sm-4">
                 <!--First Card-->
@@ -373,16 +376,16 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!--./quotes-->
+    </div>
 </div>
-</div>
-<!--./quotes-container-->
+<!--./reviews-container-->
+</section>
 
-<!--Contact Container-->
+<!--Contact Section Container-Wrapper Goes Here To Style Section Background -->
 <div class="container-wrapper-contact">
-    <!--Contact Section-->
+    <!--Contact Section Starts Here-->
     <section id="contact">
+        <!--Contact Section Container Starts Here-->
         <div class="container-fluid">
             <h2 class="section-header">Contact Us</h2>
             <hr>
@@ -459,46 +462,52 @@
             </div>
         </div>
     </section>
-<!--./contact-->
+<!--./contact-section-->
 </div>
+<!--./container-wrapper-contact-->
 
 </main>
 <!--./end main-page-content-->
 
 <!--Footer Section-->
 <footer>
-    <!--Chevron Up-->
+    <!--Container for 'To Top' Icon-->
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12">
-                <!--copied from (https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_company_footer&stacked=h)-->
+                <!--Fas fa-chevron-up icone takes users to top of page-->
+                <!--Syntax copied from (https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_theme_company_footer&stacked=h)-->
                 <a href="#myPage" title="To Top">
                     <i class="fas fa-chevron-up"></i>
                 </a>
+                 <!--./fas-fa-chevron-up-->
             </div>
         </div>
     </div>
-    <!--./fas-fa-chevron-up-->
-
-    <!--Navbar Brand-->
+    <!--./container-->
+ 
+    <!--Second Footer Container starts here-->
     <div class="container">
         <div class="row text-center align-items-center">
             <div class="col-12">
+            <!-- Branded Logo Goes Here to Promote Brand Awareness-->
                 <p> <i class="fas fa-infinity"></i>
                     <a class="navbar-brand" style="margin-top: 10px;">Infinity</a>
                 </p>
                 <p>
                     Peace love and <mark>Infinity</mark> since 2001.
                 </p>
+            <!--./end branded footer content-->
             </div>
         </div>
-        <!--./navbar-brand-->
+        <!--./second-footer-container-->
 
         <!--Footer Divider-->
         <hr class="footer-divider">
         <!--./footer-divider-->
 
-        <!--Breadcrumb Nav-->
+        <!--Third Footer Container starts here-->
+        <!--Breadcrumb Nav goes here so users can navigate back to page content-->
         <div class="row text-center align-items-center">
             <div class="col-12">
                 <nav aria-label="breadcrumb">
@@ -520,11 +529,12 @@
                         </li>
                     </ol>
                 </nav>
+            <!--./breadcrumb-nav-->
             </div>
         </div>
-        <!--./breadcrumb-nav-->
+        <!--./third-footer-container-->
 
-        <!--Socials-->
+        <!--Social Media Links-->
         <div class="row">
             <div class="col-12">
                 <ul class="nav justify-content-center">
@@ -551,7 +561,7 @@
                 </ul>
             </div>
         </div>
-        <!--./socials-->
+        <!--./social-media-links-->
     </div>
 
 </footer>
@@ -579,14 +589,15 @@
    });
 </script>
 
-<!--Responsive Navbar-->
+<!--Navbar Collapse Script -->
+<!-- This script goes here so navbar will close automatically after a user clicks a nav-link. Works across devices 
+    copied from Stack Overflow (https://stackoverflow.com/questions/42401606/how-to-hide-collapsible-bootstrap-4-navbar-on-click) -->
 <script>
     $('.navbar-collapse a').click(function () {
         $(".navbar-collapse").collapse('hide');
     });
 </script>
 <!--./responsive-navbar-->
-
 
 <!--AOS-->
 <script>
