Added hours of operation to contact section

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <div class="row justify-content-center text-justify">
                 <!--Contact Details-->
                 <div class="col-xs-4">
-                    <ul class="nav-list justify-content-center" style="padding: 0 20px;">
+                    <ul class="nav-list justify-content-center" style="padding: 0 20px; margin-top: 25px;">
                         <!--Address-->
                         <li class="contact-info">
                             <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
@@ -495,7 +495,23 @@
                         </div>
                     </form>
                 </div>
-                <!--./contact-form-->
+            </div>
+            <!--./contact-form-->
+            <div class="row text-justify" style="margin-top: 60px;">
+                <div class="col-12">
+                    <ul class="nav justify-content-center">
+                        <li id="contact-info">
+                           <i class="fas fa-calendar"></i>
+                                <span class="contact" style="margin-right: 8px;"> Open Monday - Friday</span>
+                           
+                        </li>
+                        <li id="contact-info">
+                                <i class="fas fa-clock"></i>
+                                <span class="contact">11:00am - 9:00pm </span>
+                        </li>
+                    </ul>
+                    <p style="margin-top: 10px;">Closed most weekends</p>
+                </div>
             </div>
         </div>
     </div>
