Removed excess class from about section column div

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <!--About Container-->
     <div class="container-wrapper-about">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 section-header">
+            <div class="row text-center">
+                <div class="col-12">
                     <h2 class="section-header">About Us</h2>
                     <hr>
                     <p id="description">
