--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="container-wrapper-schedule">
                 <div class="container-fluid schedule-container">
                     <div class="row text-center">
-                        <div class="col-12 section-header">
+                        <div class="col-12">
                             <h2 class="section-header">Schedule</h2>
                             <hr>
                             <p id="schedule-description">The staff of Infinity is proud to offer these classes. We love
@@ -227,7 +227,7 @@
                                     </div>
                                     <!--Card Body-->
                                     <div class="card-body">
-                                        <h4>Vinyasa Flow</h3>
+                                        <h3>Vinyasa Flow</h3>
                                         <p class="text-muted">Thursdays, 7:00pm | 90 minutes</p>
                                         <hr>
                                         <p>Flow through a sequence of Sun Salutations and standing postures, linking
@@ -316,7 +316,7 @@
             <!--Reviews Containers-->
             <div class="container-fluid reviews-container">
                 <div class="row text-center">
-                    <div class="col-12 section-header">
+                    <div class="col-12">
                         <h2 class="section-header">Customer Reviews</h2>
                         <hr>
                         <p id="reviews-description" style="margin: 40px 10px;">Want to know what our members have to say
