Repaired all problems and errors as per gitpod console

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                     <article>
                         <h3 class="about-header">Why Infinity?</h3>
                         <hr>
-                        <p class="article">Yoga and meditation have many rewarding effects on the mind, body and soul.
+                        <p class="article">
+                        Yoga and meditation have many rewarding effects on the mind, body and soul.
+                        </p>
                         <p class="text-muted">
                             Click the icons below to learn more!
                         </p>
@@ -235,9 +237,9 @@
                                         <div class="signUp">
                                             <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                             <a class="nav-item" href="#contact">Sign Up
-                                                <svg width="130" height="65" viewBox="0 0 130 65"
+                                                <svg width="130" height="65" viewbox="0 0 130 65"
                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <rect x='0' y='0' fill='none' width='130' height='65' />
+                                                    <rect x="0" y="0" fill="none" width="130" height="65" />
                                                 </svg>
                                             </a>
                                         </div>
@@ -262,9 +264,9 @@
                                         <div class="signUp">
                                             <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                             <a class="nav-item" href="#contact">Sign Up
-                                                <svg width="130" height="65" viewBox="0 0 130 65"
+                                                <svg width="130" height="65" viewbox="0 0 130 65"
                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <rect x='0' y='0' fill='none' width='130' height='65' />
+                                                    <rect x="0" y="0" fill="none" width="130" height="65" />
                                                 </svg>
                                             </a>
                                         </div>
@@ -292,9 +294,9 @@
                                         <div class="signUp">
                                             <!--Copied from (https://codepen.io/vitor-siqueira/pen/xNBExN) -->
                                             <a class="nav-item" href="#contact">Sign Up
-                                                <svg width="130" height="65" viewBox="0 0 130 65"
+                                               <svg width="130" height="65" viewbox="0 0 130 65"
                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <rect x='0' y='0' fill='none' width='130' height='65' />
+                                                    <rect x="0" y="0" fill="none" width="130" height="65" />
                                                 </svg>
                                             </a>
                                         </div>
